--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.7",
+    "expo": "~53.0.8",
     "expo-clipboard": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.0.5",
+    "expo-router": "~5.0.6",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -31,6 +31,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.14.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -40,7 +41,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.4",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "19.0.0",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3"
