--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/drawer": "^7.3.11",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.8",
     "expo-clipboard": "~7.1.4",
