--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "expo-notifications": "~0.31.2",
-    "expo-device": "~7.1.4"
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
