--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.8",
     "expo-clipboard": "~7.1.4",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
+    "expo-notifications": "~0.31.2",
     "expo-print": "~14.1.4",
     "expo-router": "~5.0.6",
     "expo-sharing": "~13.1.5",
@@ -37,10 +40,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "~0.20.0",
-    "expo-notifications": "~0.31.2",
-    "expo-device": "~7.1.4",
-    "expo-document-picker": "~13.1.5"
+    "react-native-uuid": "^2.0.3",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
