--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/drawer": "^7.3.11",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.8",
+    "expo": "53.0.9",
     "expo-clipboard": "~7.1.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.4",
+    "expo-linking": "~7.1.5",
     "expo-notifications": "~0.31.2",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.0.6",
+    "expo-router": "~5.0.7",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
