--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
         },
         "edgeToEdgeEnabled": true,
         "package": "com.astrojoni89.DesiFriends",
-        "permissions": ["NOTIFICATIONS", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
+        "permissions": ["NOTIFICATIONS", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "VIBRATE", "RECEIVE_BOOT_COMPLETED", "POST_NOTIFICATIONS"]
       },
       "web": {
         "bundler": "metro",
