--- a/app.json
+++ b/app.json
@@ -44,7 +44,8 @@
             },
             "imageWidth": 200,
             "resizeMode": "contain"
-          }
+          },
+          "@notifee/react-native"
         ]
       ],
       "experiments": {
