--- a/package.json
+++ b/package.json
@@ -16,32 +16,32 @@
     "@expo/vector-icons": "^14.1.0",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/drawer": "^7.3.11",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
-    "expo": "53.0.9",
+    "expo": "53.0.11",
     "expo-clipboard": "~7.1.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
-    "expo-notifications": "~0.31.2",
+    "expo-notifications": "~0.31.3",
     "expo-print": "~14.1.4",
     "expo-router": "~5.0.7",
     "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.14.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0"
   },
@@ -49,7 +49,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "react-test-renderer": "19.0.0",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3"
